# capsolve-sp

./: .gitignore  Cargo.toml  README.md  finetune_real.py  learn.py  mkcaptcha.py  model.py  predict.py  predict_checkpoint.py  requirements.txt
.github/workflows/: pages.yml
crates/capsolve-sp/: Cargo.toml
crates/capsolve-sp/src/: main.rs
crates/captcha-gen/: Cargo.toml
crates/captcha-gen/src/: main.rs
demo/: index.html  package-lock.json  package.json  vite.config.js
demo/src/: main.jsx  style.css
scripts/: download_models.py  export_models.py  merge.py
