[package]
name = "captcha-gen"
version = "0.1.0"
edition = "2024"
description = "Fast synthetic dataset generator for capsolve-sp"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fontdue = "0.9"
image = "0.25"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
